fixedIcons clipping,KALINIXTA

--- a/NEW/Universecity/css/darkMode.css
+++ b/NEW/Universecity/css/darkMode.css
@@ -20,10 +20,10 @@
     left: 0;
     width: 160px;
     height: 160px;
-    background: linear-gradient(to bottom, #eaeaea, #f9f9f9);
+
     border-radius: 50%;
     transform: scale(0.9);
-    box-shadow: inset 0 8px 60px rgb(223, 223, 223), inset 0 8px 8px rgba(255, 255, 255, 0.1), inset 0 -4px 4px rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 8px 60px rgb(223, 223, 223), inset 0 8px 8px rgb(237, 237, 237), inset 0 -4px 4px rgb(215, 215, 215);
     transition: 0.6s;
     width: 1.8rem;
     height: 1.8rem;
@@ -35,11 +35,9 @@
 .toggle.active .indicator {
 
     left: 2.85rem;
-    background: linear-gradient(to bottom, #444, #222);
-    box-shadow: inset 0 8px 40px rgba(0, 0, 0, 0.1),
-        inset 0 4px 4px rgba(255, 255, 255, 1),
-        inset 0 -4px 4px rgba(255, 255, 255, 1);
 
+
+    transition: 0.6s;
 }
 
 body.active,
@@ -63,9 +61,7 @@ header.active .toggle-sidebar-btn {
 
 .toggle.active {
     background-color: rgba(53, 52, 52, 0);
-    box-shadow: inset 0 2px 40px rgba(0, 0, 0, 0.1),
-        inset 0 2px 4px 8px rgba(0, 0, 0, 0.1),
-        inset 0 -2px 4px 8px rgba(0, 0, 0, 0.05);
+
 
 }
 
